--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">KolinSample</string>
+    <string name="start_with_github">Start with Github</string>
 </resources>
